# hybrid-coal

./: .gitignore  .gitmodules  .travis.yml  Doxyfile  Makefile.am  Makefile.in  README  README.md  aminclude.am  circle.yml  configure  configure.ac
doc/: .gitignore  Makefile.am  Makefile.in  coal_manual.tex  manual.tex
src/: .gitsubmodules  Makefile.am  Makefile.in  all_gene_topo.cpp  all_gene_topo.cpp-old-hybrid-coal  all_gene_topo.hpp  all_gene_topo.hpp-old-hybrid-coal  coal.cpp  coal.hpp  export.cpp  export.hpp  graph.cpp  graph.hpp  hybridcoal.cpp  hybridcoal.hpp  latex_related.cpp  main.cpp  maple_related.cpp  net.cpp  net.hpp  netContainer.hpp  newmain.cpp  node.cpp  node.hpp  nodeContainer.cpp  nodeContainer.hpp  not_inuse_main.cpp  oldcoal.hpp  rm_hybrid.cpp  rm_hybrid.hpp  untitled.sage  utility.cpp  utility.hpp
src/debug/: graph_debug.cpp  net_debug.cpp  node_debug.cpp
src/graph/: graph.cpp  node.cpp  node.hpp  nodeContainer.cpp
src/old/: all_gene_topo.hpp  export.cpp  export.hpp  net.cpp  node.hpp  not_in_use.cpp  oldcoal.cpp  oldcoal.hpp  rm_hybrid.cpp  rm_hybrid.hpp  utility.cpp
tests/: checkTotalProb.sh  checkTotalProb10.sh  checkTotalProb11.sh  checkTotalProb12.sh  checkTotalProb13.sh  checkTotalProb14.sh  checkTotalProb15.sh  checkTotalProb2.sh  checkTotalProb3.sh  checkTotalProb6.sh  checkTotalProb8.sh  checkTotalProb9.sh  checkbinary.sh
tests/paper/: n1_paper3_a_b1b2_c_d  n2_paper3_a_b1b2_c_d
tests/thesis/: WIII0aabbbc  WIII0aabbcc  WIII1aabbbc  WIII1aabbcc  WIII1abc  WIII2aabbbc  WIII2aabbcc  WIII2abc  WIII4abc  scripts.sh
tests/unittest/: test_4taxa_dist.cpp  test_Rm.cpp  test_ZeroBL.cpp  test_coal.cpp
trees/: 3_tax_s-nearopt.trees  3_tax_tree1-nearopt.trees  5_tax_sp_nt3_para1_bl06  7_tax_sp_james_col4.tre  7_tax_sp_james_col5.tre  gt3  gt4  gt5  n1_paper3
