bin_PROGRAMS = hybrid_coal #test_hybrid_coal
PROG = HYBRID_COAL
hybrid_coal_SOURCES = all_gene_topo.cpp  all_gene_topo.hpp \  
coal.cpp  coal.hpp  \ 
main.cpp  \ 
rm_hybrid.cpp  rm_hybrid.hpp \
utility.cpp  utility.hpp \
export.cpp export.hpp
#stells.cpp  stells.hpp 

include_HEADERS = all_gene_topo.hpp coal.hpp rm_hybrid.hpp utility.hpp export.hpp

#DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
#PROG = TEST_HYBRID_COAL
#test_hybrid_coal_SOURCES = all_gene_topo.cpp  all_gene_topo.hpp \  
#coal.cpp  coal.hpp  \ 
#test.cpp  \ 
#rm_hybrid.cpp  rm_hybrid.hpp \
#utility.cpp  utility.hpp \
#export.cpp export.hpp

#include_HEADERS = all_gene_topo.hpp coal.hpp rm_hybrid.hpp utility.hpp export.hpp




#if DX_COND_man

# You'd probably want to post-process man pages and installed the patched
# versions.
#dist_man1_MANS = @DX_DOCDIR@/man/man1/doxample.c.1

#$(dist_man1_MANS): doxygen-doc

#endif

#MOSTLYCLEANFILES = $(DX_CLEANFILES)

#EXTRA_DIST = cleanup bootstrap $(TESTS) $(DX_CONFIG)
